# gammaray

./: .gitignore  Makefile.am  NOTICE  README  README.md  TODO  bootstrap.sh  configure.ac  maintainer-clean
doc/: Qemu_trace_notes  Qemu_write_notes  qemu_write_path.txt  redis_architecture.rst  redis_data_schema.txt  redis_updating.txt  ubuntu.rst
doc/notes/: qemu_tracing.txt  redis_extent_updating.txt
doc/notes/fs-notes/: Cylinder-Head-Sector_Notes.txt  ntfs.txt
src/bson/: .gitignore  Makefile  __bson.h  bson-decoder.c  bson-encoder.c  bson-printer.c  bson-util.c  bson.h  bson_printer.c  bson_test.c  build.mk
src/datastructures/: .gitignore  Makefile  bitarray-test.c  bitarray.c  bitarray.h  bitarray_test.c  bst.c  bst.h  bst_test.c  build.mk  hashtable.c  linkedlist.c  linkedlist.h  linkedlist_test.c
src/disk_analyzer/: .gitignore  Makefile  Qemu_notes.txt  color.c  color.h  data_block_explorer.c  disk_analyzer.c  ext2.c  ext2.h  ext2_Notes.txt  file_record_differ.c  gpt.rst  inode_explorer.c  lvm.h  lvm_notes.rst  mbr.c  mbr.h  ntfs.c  ntfs.h  ntfs_notes.txt  serialized_format.txt  test_big_file_reconstruction.sh  test_file_reconstruction.sh
src/disk_analyzer/ebr/: ebr.c  ebr.h
src/disk_analyzer/ext2/: ext2.c  ext2.h
src/disk_analyzer/ext2/tools/: data_block_explorer.c  inode_explorer.c
src/disk_analyzer/ext4/: ext4.c  ext4.h
src/disk_analyzer/ext4/tools/: data_block_explorer.c  inode_explorer.c
src/disk_analyzer/mbr/: mbr.c  mbr.h
src/disk_analyzer/ntfs/: ntfs.c  ntfs.h
src/disk_analyzer/ntfs/tools/: file_record_differ.c
src/disk_crawler/: build.mk  disk_crawler.c  disk_crawler.h
src/disk_crawler/ext4/: ext4.c  ext4.h
src/disk_crawler/mbr/: mbr.c
src/disk_crawler/ntfs/: ntfs.c  ntfs.h
src/fuse_driver/: .gitignore  Makefile  build.mk  hello_fs.c  xray_fs.c  xray_fs.h  xray_ntfs_fs.c  xray_ntfs_fs.h  xray_unified_fs.c  xray_unified_fs.h
src/gray-crawler/: build.mk  gray-crawler.c
src/gray-crawler/ext4/: ext4.c
src/gray-crawler/fat32/: fat32.c
src/gray-crawler/gpt/: gpt.c
src/gray-crawler/mbr/: mbr.c
src/gray-crawler/ntfs/: ntfs.c
src/gray-fs/: .gitignore  build.mk  gray-fs.c
src/gray-inferencer/: build.mk  deep_inspection.c  gray-inferencer.c  gray-ndb-queuer.c  qemu_common.c  redis_queue.c
src/gray-inferencer/ext4/: LogRecord.py  journal-parser.py
src/hashtable/: hashtable.h
src/include/: __bson.h  bitarray.h  bson.h  color.h  deep_inspection.h  ext4.h  fat32.h  gammaray_fs.h  gpt.h  gray-crawler.h  mbr.h  nbd.h  ntfs.h  qemu_common.h  redis_queue.h  util.h
src/inference_engine/: async_queuer.c  build.mk  deep_inspection.c  inference_engine.c  qemu_common.c  qemu_common.h  redis_queue.c
src/nbd/: build.mk  nbd-queuer-test.c  nbd-test.c  nbd.c
src/patches/: binary_tracing_block_qemu_1-4-0.patch  drive-backup-streaming-writes_1-6-0.patch
src/stream_analyzer/: .gitignore  Makefile  Qemu_raw_notes  analysis_engine.c  async_queuer.c  byte_printer.c  byte_printer.h  deep_inspect.c  deep_inspect.h  deep_inspection.c  deep_inspection.h  inference_engine.c  inference_engine_ntfs.c  inference_engine_ntfs_demo.c  qemu_common.c  qemu_common.h  qemu_tracer.c  qemu_tracer.h  redis_queue.c  redis_queue.h  run_mem.sh  stream_analyzer.c  tokenizer.c  tokenizer.h
src/tools/: .gitignore  Makefile  bson_reader.py  dedup_cp.py  follow.py  probe.c  probe.h  reverse_index.c  shell.c  sockjs_test.html  tail.c  tail.h  tail.py  websocket_server.py
src/util/: .gitignore  Makefile  bson.c  bson.h  bson_test.c  build.mk  color-test.c  color.c  color.h  color_test.c  util-test.c  util.c  util.h  util_test.c
